--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,5 @@
--
+
+Version 3.0 (4/9/07)~~~~~~~~~~~~~~~~~~~~~~~~~~~~Although some of the systems are very similar to Version 1.0, this was effectively a ground-up redo of everything. The systems integrate together now, and there are a lot more systems available.Tested On: PennMUSH 1.8.2.p3Version 2.0 (n/a)~~~~~~~~~~~~~~~~~~~~~~~~~~~~I skipped version 2.0 because some of the individual systems were labeled with versions ranging from 1.0 to 2.0.
+
+
+Version 1.0 (2004-2005)~~~~~~~~~~~~~~~~~~~~~~~~~~~~The systems were previously archived on my homepage in some disarray. Version 1.0 is simply a collection of all the systems that were posted there. The individual systems their own version numbers, and there isn't much integration between them. This archive exists mostly for historical purposes.Tested On: PennMUSH 1.7.4p15
