--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,13 @@ Version 4.0 (In Development - Not Yet Released)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 +help - Now supports partial matches (so +help census or +help cen will find the help file for "+census").
 
+FUDGE - Fixed bug in opposed +roll.
+
+Staff - Added +send command.
+
+Cookies - Fixed bug with cookie posting.
+
+Weather - Added a simple weather system (still not quite finished)
 
 
 Version 3.0 (4/9/07)~~~~~~~~~~~~~~~~~~~~~~~~~~~~Although some of the systems are very similar to Version 1.0, this was effectively a ground-up redo of everything. The systems integrate together now, and there are a lot more systems available.Tested On: PennMUSH 1.8.2.p3Version 2.0 (n/a)~~~~~~~~~~~~~~~~~~~~~~~~~~~~I skipped version 2.0 because some of the individual systems were labeled with versions ranging from 1.0 to 2.0.
