Split +rp into +IC and +OOC.  Created a separate data object for the data.
git-svn-id: https://faramushcode.googlecode.com/svn/trunk@187 e2dc93ee-7d2d-0410-af30-bd5c5d140aa9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,7 @@ Cookies - Fixed bug with cookie posting.
 
 Weather - Added a simple weather system (still not quite finished)
 
-Globals - Changed +idle to +afk and RP_OK to IC.  Added +fullname.  Added support for showing IC in magenta if someone's in a TP Room.
+Globals - Changed +idle to +afk and RP_OK to IC.  Added +fullname.  Added support for showing IC in magenta if someone's in a TP Room.  Split +RP into +IC and +OOC.  Created a separate data object for the data.
 
 Functions - Fixed typos in help for line_no_color function.
 
