Made +help mux friendly
git-svn-id: https://faramushcode.googlecode.com/svn/trunk@192 e2dc93ee-7d2d-0410-af30-bd5c5d140aa9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 Version 4.0 (In Development - Not Yet Released)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 +help - Now supports partial matches (so +help census or +help cen will find the help file for "+census").
+Fixed MUX compatibility bugs.  Should now work on TinyMUX.
 
 FUDGE - Fixed bug in opposed +roll.
 
