--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@ Version 4.0 (In Development - Not Yet Released)
 +help - Now supports partial matches (so +help census or +help cen will find the help file for "+census").
 Fixed MUX compatibility bugs.  Should now work on TinyMUX.
 
+Alts - Made the job notice optional.
+
 Jobs - Priority, status and title commands were not updating activity.  Now they do.
 
 FUDGE - Fixed bug in opposed +roll.
@@ -15,7 +17,7 @@ Weather - Added a simple weather system (still not quite finished)
 
 Globals - Changed +idle to +afk and RP_OK to IC.  Added +fullname.  Added support for showing IC in magenta if someone's in a TP Room.  Split +RP into +IC and +OOC.  Created a separate data object for the data.
 
-Functions - Fixed typos in help for line_no_color function.
+Functions - Fixed typos in help for line_no_color function.  Added append() and wikifi() functions.
 
 Player Setup - Fixed two bugs in the setup_attr function.  If you had an attribute that was an evaluation, it wasn't properly evaluating it when it initialized on existing players.  Also, if you had a visible attribute, it wasn't initializing on existing players at all.
 
