Fixed jobs installer.
git-svn-id: https://faramushcode.googlecode.com/svn/trunk@231 e2dc93ee-7d2d-0410-af30-bd5c5d140aa9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+Version 4.1 (6/13/08)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Jobs
+~~~~~~~~~~~
+Fixed installer, which was not setting the wiz flag on the function object.
+
+Room Parent
+~~~~~~~~~~~
+Fixed reference to level - should have been AREA.  
+Fixed exit format to space correctly for 4-letter exit names.
+
+
 Version 4.0 (03/17/08)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
