added in dev items
git-svn-id: https://faramushcode.googlecode.com/svn/trunk@263 e2dc93ee-7d2d-0410-af30-bd5c5d140aa9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+In Development
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Functions: Added prettify and unprettify
+Systems now create +jobs for to-do items when installed
++census:  +faction/+org/+position command details now work properly when in chargen
++cookie: Removed mention of mail command.
++jobs:  +jobs/new, +jobs/catchup
+FS3!
+FARAMAIL!
+
+
+
 Version 4.1 (6/13/08)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Jobs
