Added connect command and rudimentary player tracking to WHO. Split WHO into a separate module.
git-svn-id: https://faramushcode.googlecode.com/svn/trunk@508 e2dc93ee-7d2d-0410-af30-bd5c5d140aa9

--- a/aresmush/aresmush/locale/de/LC_MESSAGES/AresMUSH.po
+++ b/aresmush/aresmush/locale/de/LC_MESSAGES/AresMUSH.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: engine/comm/connection.py:30
 msgid "Welcome to AresMUSH"
-msgstr "Welcome BÄär"
+msgstr "Welcome to AresMUSH"
 
 #: engine/comm/connection.py:39
 msgid "Goodbye!  Please come back soon."
