--- a/farasoftcode/README
+++ b/farasoftcode/README
@@ -1,11 +1,13 @@
 Faraday's MUSH Softcode Package
 
+This package provides a variety of softcode utilities for PennMUSH.
+
 ~~~~~~~~~~~~~~~
 CONTACT
 ~~~~~~~~~~~~~~~
 
-Author:      Linda O'Meara (aka Faraday)
-Website:   http://code.google.com/p/faramushcode/
+Author:      Linda Naughton (aka Faraday)
+Website:   http://wordsmyth.org/aresmush/
 
 Visit the website for documentation, installation instructions, bug reports, and more.
 
