Fixed bug in idle purger where it wouldn't add protected players to the list properly.

--- a/farasoftcode/Installers/CHANGELOG
+++ b/farasoftcode/Installers/CHANGELOG
@@ -1,5 +1,19 @@
 ================================================================
-----------------------------------------------------------------================================================================
+----------------------------------------------------------------
+
+Patch 5.0.3
+
+Idle Purger - Fixed a problem with the idle protect command where it wasn't adding new names properly to the end of the list.
+
+Patch 5.0.2
+
+Room Parents - TP Room parent wasn't setting up DB #'s properly, so various things didn't work.
+
+Patch 5.0.1
+
+Player Setup - Initializes FaraMail properly on new players.
+
+================================================================
 Version 5.0 (4/19/2010)
 ================================================================
 ----------------------------------------------------------------================================================================
