Fixed who bug, first version of players guide

--- a/farasoftcode/Installers/CHANGELOG
+++ b/farasoftcode/Installers/CHANGELOG
@@ -1,5 +1,9 @@
 ================================================================
+6.1 (in progress)
 ----------------------------------------------------------------
+Who
+~~~~~~~
+Fixed bug in the IC counter function.
 
 ================================================================
 Version 6.0 (11/14/2010)
