Fixed defense stats for firearms.  Completed players/storyteller guides

--- a/farasoftcode/Installers/CHANGELOG
+++ b/farasoftcode/Installers/CHANGELOG
@@ -5,6 +5,9 @@ Who
 ~~~~~~~
 Fixed bug in the IC counter function.
 
+Weather
+fixed type calculation (Cags)
+
 ================================================================
 Version 6.0 (11/14/2010)
 ================================================================
